# server/docs/swagger.yaml
@@ -1,4 +1,37 @@
 definitions:
+  entitys.KakaoTalkSocial:
+    properties:
+      email:
+        type: string
+      id:
+        type: integer
+      nickName:
+        type: string
+      thumbnailImage:
+        description: 이미지의 url을 저장하기 위한 최대 크기로 잡아놓았습니다.
+        type: string
+    type: object
+  entitys.User:
+    properties:
+      avatarImage:
+        items:
+          type: integer
+        type: array
+      connectedAt:
+        type: string
+      email:
+        type: string
+      id:
+        type: integer
+      kakaoTalkSocial:
+        $ref: '#/definitions/entitys.KakaoTalkSocial'
+      kakaoTalkSocialsId:
+        type: integer
+      name:
+        type: string
+      password:
+        type: string
+    type: object
   models.ErrResponse:
     properties:
       message:
@@ -67,7 +100,7 @@ paths:
               description: /users/1
               type: string
           schema:
-            $ref: '#/definitions/models.User'
+            $ref: '#/definitions/entitys.User'
         "400":
           description: Bad Request
           schema:
